--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Contador</h1>
+        <h1>Contador para treinar estruturas de repetição</h1>
     </header>
 
     <section>
